# tak_cot_bridge

./: README.md  package.xml  setup.cfg  setup.py
config/: tak_config.yaml
launch/: cot_bridge.launch.py
tak_cot_bridge/: cot_publisher_node.py  cot_utils.py
